@@ -119,7 +119,7 @@ echo -e "Removendo software desnecessários, aguarde..."
 echo -e "Software removidos com sucesso!!!, continuando com o script...\n"
 sleep 5
 #
-echo -e "Instalando e Configurando o Netdata, aguarde...\n"
+echo -e "Iniciando a Instalação e Configurando o Netdata, aguarde...\n"
 sleep 5
 #
 echo -e "Instalando as dependências do Netdata, aguarde..."
