@@ -153,7 +153,7 @@ echo -e "Removendo software desnecessários, aguarde..."
 echo -e "Software removidos com sucesso!!!, continuando com o script...\n"
 sleep 5
 #
-echo -e "Instalando e Configurando o LogAnalyzer, aguarde...\n"
+echo -e "Iniciando a Instalação e Configurando o LogAnalyzer, aguarde...\n"
 sleep 5
 #
 echo -e "Instalando as dependências do LogAnalyzer, aguarde..."
